GNOME Bugzilla – Bug 694742
Fix possible memory leak when GlobalAlloc() fails
Last modified: 2013-02-26 14:16:37 UTC
In _gdk_win32_window_change_property(), if GlobalAlloc() fails the 'wcptr' pointer should get freed. Instead, the code is freeing a NULL 'buf' variable which is nowhere else used.
Created attachment 237441 [details] [review] Patch for the issue.
Comment on attachment 237441 [details] [review] Patch for the issue. That looks correct.
Pushed to git master, gtk-2-24 and gtk-3-6.