win32: fix possible memleak if GlobalAlloc() fails

Also remove the unused 'buf' variable.

https://bugzilla.gnome.org/show_bug.cgi?id=694742